delay on collapse comments to fix the animation

--- a/public/stylesheets/less/rp-article.less
+++ b/public/stylesheets/less/rp-article.less
@@ -256,13 +256,12 @@ md-dialog .rp-article-thread-progress-wrapper {
 rp-article md-content {
     background-color: @rp-background-content !important;
 }
-
-// .rp-comments-loadall {
-//     padding-left: 0;
-//     padding-right: 0;
-//     margin-left: 0;
-//     margin-right: 0;
-// }
+.rp-comments-loadall-card {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
 md-dialog .rp-comments-loadall {
     margin: 0 auto;
     width: 100%;
